more tiny comments

--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -46,7 +46,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(\"Using device:\", device)\n",
         "\n",
-        "vae_latent_dim = 31\n",
+        "vae_latent_dim = 16\n",
         "vae_epochs = 25\n",
         "vae_batch_size = 128\n",
         "vae_lr = 1e-3"
@@ -130,10 +130,6 @@
       "source": [
         "class VAE(nn.Module):\n",
         "    def __init__(self, latent_channels=16):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            latent_channels: Number of channels in the latent space.\n",
-        "        \"\"\"\n",
         "        super().__init__()\n",
         "        self.latent_channels = latent_channels\n",
         "\n",
@@ -263,7 +259,7 @@
         }
       ],
       "source": [
-        "vae = VAE().to(device)\n",
+        "vae = VAE(vae_latent_dim).to(device)\n",
         "vae_optimizer = torch.optim.Adam(vae.parameters(), lr=vae_lr)\n",
         "\n",
         "print(vae)"
